# vllm-setup

./: .gitignore  container-setup  pyproject.toml  start-container
design/: CLI Troubleshooting Practices.md  architecture.md  requirements
design/tasks/: 01-walking-skeleton-help-config.md  02-config-schema-init.md  03-list.md  04-stop-stop-all.md  05-ps.md  06-download.md  07-logs.md  08-start-restart.md  README.md
tests/: test_cli.py  test_config.py  test_download.py  test_errors.py  test_list.py  test_logs.py  test_ps.py  test_start.py  test_stop.py
vllm_cli/: cli.py  config.py  errors.py  logging_setup.py  models.py  render.py
vllm_cli/adapters/: docker_adapter.py  health.py  hf_adapter.py  ports.py
