[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vllm-cli"
version = "0.1.0"
description = "CLI for managing local vLLM Docker containers"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "docker>=7.0",
    "psutil>=5.9",
    "huggingface-hub>=0.23",
    "httpx>=0.27",
    "rich>=13.0",
]

[project.scripts]
vllm-cli = "vllm_cli.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
